nerv/main/cluster/apps/ollama/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
spec:
  parentRefs:
    - name: internal
      namespace: networking-system
  hostnames:
    - embeddings.nerv.id
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
